<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/but_one"
            android:text="@string/app_but1"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/but_two"
            android:text="@string/app_but2"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/but_three"
            android:text="@string/app_but3"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/but_four"
            android:text="@string/app_but4"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/but_five"
            android:text="@string/app_but5"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/but_six"
            android:layout_marginLeft="10dp"
            android:text="@string/app_but6"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/but_seven"
            android:layout_marginLeft="10dp"
            android:text="@string/app_but7"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/but_eight"
            android:text="@string/app_but8"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image_fresco"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>